...
            android:background="@android:drawable/ic_menu_help"
            android:layout_margin="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textEquation"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:hint="Enter the equation here"
            android:background="@android:drawable/edit_text"
            android:typeface="serif" />
...

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Solve"
            android:id="@+id/buttonSolve"
            android:layout_below="@+id/buttonPlot"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/buttonPlot"
            android:layout_alignStart="@+id/buttonPlot"
            android:minHeight="40dp" />
...
