...

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="X"
            android:id="@+id/textViewIDCharacter"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#bbbbbb" />

    </LinearLayout>

...
