...
        android:layout_height="wrap_content" >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned|numberDecimal"
            android:ems="8"
            android:id="@+id/editCoefficient"
            android:layout_gravity="center_vertical"
            android:background="@android:drawable/edit_text"
            android:hint="0.0"
            android:singleLine="true" />

        <TextView
...
